# kernel

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml  docker-image.yml
adapters/filesystem/: Cargo.toml
adapters/filesystem/src/: lib.rs
adapters/filesystem/tests/unit/: filesystem_tests.rs
adapters/http/: Cargo.toml
adapters/http/src/: lib.rs
adapters/http/tests/unit/: http_tests.rs
adr/: 0001-message-schema-boundary.md  0002-distributed-identity-boundaries.md  0003-governance-state-scopes.md
crates/splendor-daemon/: Cargo.toml
crates/splendor-daemon/src/: lib.rs  main.rs
crates/splendor-daemon/tests/: integration_kernel_e2e_001_local_loop.rs  integration_kernel_e2e_002_daemon_boundary.rs  integration_kernel_e2e_003_local_multi_agent.rs  integration_kernel_e2e_004_resident_work_order.rs  integration_kernel_e2e_005_remote_messages.rs  integration_kernel_e2e_006_trace_state_handoff.rs  integration_kernel_e2e_007_fleet_telemetry.rs  integration_kernel_e2e_008_final_journey.rs  integration_kernel_e2e_009_data_local_finance.rs  integration_kernel_e2e_010_shared_specialist_isolation.rs  integration_kernel_e2e_011_remote_helper_proposal.rs  integration_kernel_e2e_012_placement_fallback.rs  integration_kernel_e2e_013_read_only_state_reference.rs  integration_kernel_e2e_014_adapter_failure_retry.rs  integration_kernel_e2e_015_openapi_contract.rs  integration_kernel_e2e_0_03.rs  runtime_daemon_api_tests.rs
crates/splendor-daemon/tests/kernel_e2e_0_03/: mod.rs
crates/splendor-gateway/: Cargo.toml
crates/splendor-gateway/src/: lib.rs
crates/splendor-gateway/tests/unit/: gateway_tests.rs
crates/splendor-kernel/: Cargo.toml
crates/splendor-kernel/examples/: hello_kernel.rs
crates/splendor-kernel/src/: escalation.rs  fleet_telemetry.rs  lib.rs  local_delegation.rs  loop_engine.rs  message_router.rs  node_registry.rs  policy_cache.rs  remote_message_transport.rs  runtime.rs  scheduler.rs  state.rs  tenancy.rs  trace.rs  trace_durability.rs
crates/splendor-kernel/tests/: integration_adapters_filesystem_http_gateway.rs  integration_loop_engine_quota_denial.rs  integration_loop_engine_state_trace_persistence.rs  integration_scheduler_state_trace_resume.rs
crates/splendor-kernel/tests/unit/: escalation_tests.rs  fleet_telemetry_tests.rs  local_delegation_tests.rs  loop_engine_tests.rs  message_router_tests.rs  node_registry_tests.rs  policy_cache_tests.rs  remote_message_transport_tests.rs  runtime_tests.rs  scheduler_tests.rs  state_tests.rs  tenancy_tests.rs  trace_durability_tests.rs  trace_tests.rs
crates/splendor-store/: Cargo.toml
crates/splendor-store/src/: lib.rs  state.rs  trace.rs  trace_sync.rs
crates/splendor-store/tests/unit/: state_tests.rs  trace_sync_tests.rs  trace_tests.rs
crates/splendor-types/: Cargo.toml
crates/splendorctl/: Cargo.toml
crates/splendorctl/src/: main.rs
crates/splendorctl/tests/unit/: cli_tests.rs
docs/deployment/: docker.md
docs/development/: ci-release-checklist.md  kernel-e2e-integration-tests.md
docs/getting-started/: local-runtime.md
docs/reference/: action-gateway.md  agent-isolation.md  approval-verifier.md  capabilities.md  central-trace-index.md  circuit-breakers.md  core-objects.md  daemon-security-boundary.md  escalation-policies.md  fleet-telemetry.md  governance-state.md  governance-workflows.md  identity.md  kernel-runtime.md  local-delegation.md  local-message-router.md  messages.md  multi-agent-replay.md  node-registry.md  offline-policy-cache.md  placement.md  policy-distribution.md  python-bindings.md  quotas.md  remote-messaging.md  replay.md  run-config.md  runs.md  runtime-daemon-api.md  runtime-loop.md  serialization.md  splendorctl.md  state-graph.md  state-handoff.md  state-store.md  trace-events.md  trace-store.md  trace-sync.md  work-orders.md
docs/releases/: 0.01-dev.md  0.02-dev.md  known-limitations.md
docs/rfc/: 0001-child-run-linked-trace-event.md
docs/rules/: splendor_dev_model.md  sprints_frs_milestones.md  verifiable_criteria.md
docs/security/: signed-work-orders.md
examples/action-approval-flow/: README.md
openapi/: splendor-runtime-daemon.yaml
python/: pyproject.toml
python/bindings/: Cargo.toml  pyproject.toml
python/bindings/src/: lib.rs
scripts/: container-tests.sh  verify-0.01-baseline.sh  verify-0.03-kernel-e2e.sh
(+142 files in other folders)
