[workspace]
members = [
    "crates/splendor-types",
    "crates/splendor-kernel",
    "crates/splendor-gateway",
    "crates/splendor-store",
    "crates/splendorctl",
    "adapters/filesystem",
    "adapters/http",
    "python/bindings",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["serde", "serde-well-known"] }
uuid = { version = "1.7", features = ["v4", "v5", "serde"] }
