[package]
name = "splendor-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
splendor-gateway = { path = "../splendor-gateway" }
splendor-kernel = { path = "../splendor-kernel" }
splendor-store = { path = "../splendor-store" }
splendor-types = { path = "../splendor-types" }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
uuid = { workspace = true }

[dev-dependencies]
serde_yaml = "0.9"
tower = { version = "0.5", features = ["util"] }
