[package]
name = "splendorctl"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
splendor-adapter-filesystem = { path = "../../adapters/filesystem" }
splendor-adapter-http = { path = "../../adapters/http" }
splendor-gateway = { path = "../splendor-gateway" }
splendor-kernel = { path = "../splendor-kernel" }
splendor-store = { path = "../splendor-store" }
splendor-types = { path = "../splendor-types" }
uuid = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
